2010-04-11  Karl Berry  <karl@tug.org>

	* afm2tfm.c (staticligkern): restore spaces around semicolons,
	accidentally removed in source cleanup.
	
        * afm2tfm.c (throughout): use snprintf where needed.

2010-03-29  Karl Berry  <karl@tug.org>

	* loadfont.c,
	* tfmload.c,
	* virtualfont.c: concatn terminates with NULL.  From Akira.

2010-03-28  Karl Berry  <karl@tug.org>

	* all files: no spaces before semicolons.

	* loadfont.c,
	* tfmload.c,
	* virtualfont.c,
	* bbox.c,
	* writet1.c,
	* dvips.c,
	* header.c: dynamically concatenate more error strings.
	* protos.h (errbuf): increase.

2010-03-26  Karl Berry  <karl@tug.org>

	* virtualfont.c (badvf, virtualfont): use concat[n] instead of
		sprintf for error messages.
	(<kpathsea/concatn.h>): #include.

	* virtualfont.c (vfopen): do not sprintf too long of a name.
	CVE-2010-0827, found by Dan Rosenberg.

	* dospecial.c (predospecial): avoid seg fault from integer overflow.
	CVE-2010-0739, found by Marc Schoenefeld, patch prepared
	by Jindrich Novy.

2010-02-26  Karl Berry  <karl@tug.org>

	* search.c (selfautoloc_prog, quote_name): remove kpse_ prefix for
	the time being, since it seems web2c's safeness stuff can't be
	easily factored into using them.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* search.c: #include <kpathsea/variable.h> for kpse_var_value.

2010-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add the new files.

2010-02-19  Karl Berry  <karl@tug.org>

	* search.c (kpse_self_autoloc_prog) [WIN32]: p needs to be
	writable.  From Akira.

2010-02-18  Karl Berry  <karl@tug.org>

	* Makefile.am (TESTS): add quotecmd-test.pl.
	* quotecmd-test.pl,
	* testdata/quotecmd.tex: new files.
	* search.c (search): selfautoloc gunzip, and quote name before
	calling popen.
	(kpse_quote_name, kpse_self_autoloc_prog): new fns,
	only temporarily here until we factor out the common code from
	texmfmp.c.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
