@@ -1,0 +1,7 @@
+ChangeLog.TL: TeX Live (TL) changes for mendexk
+===============================================
+
+2010-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (EXTRA_DIST): Add indexsty, mendex.doc.
+	Add rule to rebuild kpathsea.
