@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/mendexk/
 ##
-## Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2010 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -34,9 +34,21 @@ $(mendex_OBJECTS): $(KPATHSEA_DEPEND) $(PTEXENC_DEPEND)
 LDADD = $(PTEXENC_LIBS) $(KPATHSEA_LIBS)	
 
 ## Rebuild libkpathsea & libptexenc
+@KPATHSEA_RULE@
 @PTEXENC_RULE@
 
 dist_man1_MANS = mendex.1
 
-EXTRA_DIST = COPYRIGHT COPYRIGHT.jis ChangeLog README
+EXTRA_DIST = \
+	COPYRIGHT \
+	COPYRIGHT.jis \
+	ChangeLog \
+	ChangeLog.TL \
+	README
+
+## Eventually delete these files
+##
+EXTRA_DIST += \
+	indexsty \
+	mendex.doc
 
