@@ -1,2 +1,0 @@
-{1:}program CFtest;type{2:}eightbits=0..255;{:2}{:1}{3:}
-begin writeln('This is CFtest');end.{:3}
